--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-  "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DietDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-},
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DietDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=DietDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
